Finalizando Vinculação de usuario, com Lancamentos e Categorias

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,8 +37,9 @@
                         </div>
 
                         <div class="text-center">
-                            <button class="btn btn-block btn-lg btn-primary" type="submit" [disabled]="!formGroup.valid">
+                            <button class="btn btn-block btn-lg btn-primary text-center text-light" type="submit" [disabled]="!formGroup.valid"> 
                                 Login
+                                <i class="fas fa-paper-plane ml-2"  aria-hidden="true"></i>
                             </button>
                         </div>
 
