--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,6 +1,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent">
+
     <div class="container-fluid">
+
         <div class="navbar-wrapper">
             <div class="navbar-toggle">
                 <button type="button" class="navbar-toggler">
@@ -9,13 +11,19 @@
                     <span class="navbar-toggler-bar bar3"></span>
                 </button>
             </div>
-            <a class="navbar-brand" routerLink="/"><strong> Controle Financeiro</strong></a>
+            <a class="navbar-brand" routerLink="/">
+                <h4> Controle Financeiro</h4>
+            </a>
+        </div>
+
+        <div>
+            <button type="button" class="btn btn-outline-danger" (click)="logout()" data-toggle="tooltip"
+                data-placement="left" title="Sair">
+                Sair
+                <i class="fas fa-sign-out-alt"></i>
+            </button>
         </div>
     </div>
 
-
-    <div>
-        <button type="button" class="btn btn-outline-info" (click)="logout()">Sair</button>
-    </div>
 </nav>
 <!-- End Navbar -->
