--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -27,7 +27,7 @@
             <option value="5">Maio</option>
             <option value="6">Junho</option>
             <option value="7">Julho</option>
-            <option value="8">Agosto</option>
+            <option value="8">Agosto - com laçamentos p/teste</option>
             <option value="9">Setembro</option>
             <option value="10">Outubro</option>
             <option value="11">Novembro</option>
@@ -43,7 +43,7 @@
             <option value="">Selecione um Ano</option>
 
             <option value="2018">2018</option>
-            <option value="2019">2019</option>
+            <option value="2019">2019 - com laçamentos p/teste</option>
 
           </select>
         </div>
