Ajustes, e enviando para AWS 05-08-2019

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer footer-black  footer-white ">
+<footer class="footer " style="background: rgba(149, 166, 167, 0.068)">
     <div class="container-fluid">
       <div class="row">
        
