--- a/src/app/core/components/header-nav/header-nav.component.html
+++ b/src/app/core/components/header-nav/header-nav.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar" data-color="white" data-active-color="danger">
+<div class="sidebar" data-color="dark" data-active-color="danger">
   <!--
     Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
 -->
@@ -6,42 +6,42 @@
     <a href="#" class="simple-text logo-mini">
       <div class="logo-image-small">
         <img src="./../../../../assets/img/user_.jpg" class="img-profile rounded-circle" alt="">
-      </div>
-      <p class="text-center text-white">Dowglas Maia</p>
+      </div>      
     </a>
 
     <span class="simple-text logo-normal">
-      Dowglas maia     
+      Dowglas maia
     </span>
 
   </div>
   <div class="sidebar-wrapper">
     <ul class="nav">
-      <li>
-        <a class="nav-link" routerLinkActive="active" routerLink="/reports" aria-expanded="false">
-          <i class="fab fa-accusoft"></i>
-          <span class="hide-menu">Relatórios</span>
-        </a>
-      </li>
 
       <li>
-        <a class="nav-link" routerLinkActive="active" routerLink="/entries" aria-expanded="false">
+        <a class="nav-link"  routerLinkActive="active" routerLink="entries" aria-expanded="false">
           <i class="fas fa-feather-alt"></i>
           <span class="hide-menu">Lançamento</span>
         </a>
       </li>
 
       <li>
-        <a class="nav-link" routerLinkActive="active" routerLink="/categories" aria-expanded="false">
-          <i class="fas fa-chart-pie"></i>
-          <span class="hide-menu">Categorias</span>
+        <a class="nav-link"  routerLinkActive="active" routerLink="categories" aria-expanded="false">
+          <i class="fab fa-accusoft"></i>
+         
+          <span class="hide-menu ">Categorias</span>
         </a>
       </li>
 
+      <li>
+        <a  class="nav-link" routerLinkActive="active" routerLink="reports" aria-expanded="false">
+          <i class="fas fa-chart-pie"></i>
+          <span class="hide-menu">Relatórios</span>
+        </a>
+      </li>
 
     </ul>
-  
+
   </div>
 
- 
+
 </div>
