--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -36,7 +36,7 @@
                             </div>
                         </div>
 
-                        <div class="text-center">
+                        <div class="text-center pt-4 pb-3">
                             <button class="btn btn-block btn-lg btn-primary text-center text-light" type="submit"
                                 [disabled]="!formGroup.valid">
                                 Login
@@ -47,12 +47,12 @@
                     </form>
                 </div>
 
-                <span class="text-center">p/teste entre com e-mail:<strong> maia_01@maia.com ou
-                        maia_02@maia.com</strong>
-                </span>
-                <span class="text-center">Senha : <strong> 123</strong></span>
-
             </div>
+            <div class="text-center">p/testar entre com o e-mail:<br>
+                <strong> maia_01@maia.com ou maia_02@maia.com</strong> <br>
+                          e senha : <strong> 123</strong>               
+            </div>
+
         </div>
     </div>
 
